--- a/index.html
+++ b/index.html
@@ -549,6 +549,70 @@
       </div>
     </div>
 
+    <!-- Мобільне меню -->
+
+    <button class="menu-mobile" type="button" aria-expanded="false" .js-open-menu>
+      <svg
+        class="menu-mobile__icon"
+        width="40"
+        height="40"
+        aria-label="Переключатель мобильного меню"
+      >
+        <use class="menu-mobile__menu" href="./img/symbol-defs.svg#menu"></use>
+      </svg>
+    </button>
+    <div class="header-menu-container" .js-menu-container>
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a href="./index.html" class="nav-list__link nav-list__link--current">Студия</a>
+        </li>
+        <li class="navigation__item">
+          <a href="./portfolio.html" class="nav-list__link">Портфолио</a>
+        </li>
+        <li class="navigation__item">
+          <a href="/" class="nav-list__link">Контакты</a>
+        </li>
+      </ul>
+      <ul class="contact">
+        <li class="contact__item">
+          <a href="maito:info@devstudio.com" class="contact__link">
+            <svg class="contact__icon" width="14" height="10">
+              <use href="./img/symbol-defs.svg#ienvelope"></use></svg
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contact__item">
+          <a href="tell:+380961111111" class="contact__link contact__link--accent">
+            <svg class="contact__icon" width="10" height="14">
+              <use href="./img/symbol-defs.svg#smartphone"></use></svg
+            >+380 96 111 11 11</a
+          >
+        </li>
+      </ul>
+      <ul class="social-list__menu">
+        <li class="social-list__item">
+          <a href="" class="social-list__links">Instagram</a>
+          <span class="social-list__line"></span>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__links">Twitter</a>
+          <span class="social-list__line"></span>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__links">Facebook</a>
+          <span class="social-list__line"></span>
+        </li>
+        <li class="social-list__item">
+          <a href="" class="social-list__links">LinkedIn</a>
+        </li>
+      </ul>
+      <button class="close-menu-btn" .js-close-menue>
+        <svg class="icon-close-btn">
+          <use href="./img/symbol-defs.svg#close"></use>
+        </svg>
+      </button>
+    </div>
+    <script src="./mobile-menu.js"></script>
     <script src="./modal.js"></script>
   </body>
 </html>
