--- a/index.html
+++ b/index.html
@@ -610,7 +610,9 @@
         <nav class="menu-container__nav">
           <ul class="mobile__list">
             <li class="menu-container__item">
-              <a href="./index.html" class="menu-container__link">Студія</a>
+              <a href="./index.html" class="menu-container__link menu-container__link_color_accent"
+                >Студія</a
+              >
             </li>
             <li class="menu-container__item">
               <a href="./portfolio.html" class="menu-container__link">Портфоліо</a>
