--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
         <nav class="nav-menu">
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link nav-list__link_current">Студія</a>
+              <a href="./index.html" class="nav-list__link">Студія</a>
             </li>
             <li class="nav-list__item">
-              <a href="./portfolio.html" class="nav-list__link">Портфоліо</a>
+              <a href="./portfolio.html" class="nav-list__link nav-list__link_current">Портфоліо</a>
             </li>
             <li class="nav-list__item">
               <a href="#" class="nav-list__link">Контакти</a>
@@ -477,7 +477,11 @@
               <a href="./index.html" class="menu-container__link">Студія</a>
             </li>
             <li class="menu-container__item">
-              <a href="./portfolio.html" class="menu-container__link">Портфоліо</a>
+              <a
+                href="./portfolio.html"
+                class="menu-container__link menu-container__link_color_accent"
+                >Портфоліо</a
+              >
             </li>
             <li class="menu-container__item">
               <a href="/" class="menu-container__link">Контакти</a>
